--- a/manuscript/manuscript.tex
+++ b/manuscript/manuscript.tex
@@ -166,32 +166,35 @@ Kingston, RI, 02882, USA\\*
 \hrule
 
 Cyanobacteria harmful algal blooms (cHABs) are associated with a wide
-arrange of adverse health effects that stem mostly from the presence of
-cyanotoxins. To help protect agains the impacts, several health advisory
-levels have been set for some of these toxins, in particular, one of the
+range of adverse health effects that stem mostly from the presence of
+cyanotoxins. To help protect against these impacts, several health
+advisory levels have been set for some toxins. In particular, one of the
 most common toxins, microcystin, has several advisory levels set for
 drinking water and recreational use and managing water bodies to meet
-those levels could have far reaching benefits. However, measuring
-micorcystin can not currently be done \emph{in situ} and requires
-samples be processed in a lab. This time consuming and expensive. It is
-possible to find reliable indicators that may be estimated quickly and
-\emph{in situ} as a first defense agains high level of microcystin. In
-particular, chlorophyll \emph{a} has been shown to be postively
-associated with microcystin. In this paper we use this assocation to
-provide estimates of chlorophyll \emph{a} that if exceeded would be
-indiciative of a higher likelihood of exceeding select concentrations of
-microcystin. Using the 2007 National Lakes Assessment and a conditional
-probability appoach that has been used in other water quality settings,
-we idenfify chlorophyll \emph{a} concentrations that are more likely
-than not to be associated with an exceedance of a microcystin health
-advisory level. We look at the recent US EPA standards for drinking
-water as well as the World Health Organization levels for drinking water
-and recerational use. For microcystin concentrations of 0.3, 1, 1.6, 2.
-and 4 we find chlorophyll \emph{a} concentrations of 23.68, 65.2, 79.8,
-113.14, and 273.6, respectively. When managing for these various
-microsystin levels exceed these reproted chlorophyll \emph{a}
-concentratoins should be a trigger for further testing and possibly
-managment action.
+those levels could have far reaching benefits. However, compared to
+other water quality measures, measurements of microcystin are not common
+and current field measurement techniques have limited precision and
+accuracy. Addressing these issues will take time and resourced. Thus,
+there is utility in finding indicators of microcystin that are already
+widely available, can be estimated quickly and \emph{in situ}, and used
+as a first defense against high levels of microcystin. In particular,
+chlorophyll \emph{a} is very commonly measured, can be estimated
+\emph{in situ}, and has been shown to be postively associated with
+microcystin. In this paper we use this assocation to provide estimates
+of chlorophyll \emph{a} that if exceeded would be indiciative of a
+higher probability of exceeding select health advisory concentrations
+for microcystin-LR. Using the 2007 National Lakes Assessment and a
+conditional probability appoach that has been used in other water
+quality settings, we idenfify chlorophyll \emph{a} concentrations that
+are more likely than not to be associated with an exceedance of a
+microcystin health advisory level. We look at the recent US EPA
+standards for drinking water as well as the World Health Organization
+levels for drinking water and recerational use. For microcystin
+concentrations of 0.3, 1, 1.6, and 2 we find chlorophyll \emph{a}
+concentrations of 25.1, 69.6, 84.96, and 113.14, respectively. When
+managing for these various microsystin levels exceeding these reproted
+chlorophyll \emph{a} concentrations should be a trigger for further
+testing and possible managment action.
 
 \vspace{3mm}
 
@@ -316,8 +319,11 @@ Recreational
 \end{longtable}
 
 We evaulated associated chlorohpyll \emph{a} concentrations for an
-effect for each of the WHO and EPA levels. These were 0.3, 1, 1.6, 2, 4,
-10, and 20 ug/l.
+effect for each of the WHO and EPA levels. Lakes with higher
+microcystin-LR concentrations were rare. Only 1.1616651 \% of lakes
+sampled had a concentration greater than 10. For this analysis we focus
+on the microcystin concentrations that are better represented in the NLA
+data. These were 0.3, 1, 1.6, and 2 ug/l.
 
 \subsection{Data and Study Area}\label{data-and-study-area}
 
@@ -343,7 +349,7 @@ EPA\_Child
 0.3
 \strut\end{minipage} &
 \begin{minipage}[t]{0.18\columnwidth}\raggedright\strut
-23.68
+25.1
 \strut\end{minipage}\tabularnewline
 \begin{minipage}[t]{0.13\columnwidth}\raggedright\strut
 WHO
@@ -352,7 +358,7 @@ WHO
 1
 \strut\end{minipage} &
 \begin{minipage}[t]{0.18\columnwidth}\raggedright\strut
-65.2
+69.6
 \strut\end{minipage}\tabularnewline
 \begin{minipage}[t]{0.13\columnwidth}\raggedright\strut
 EPA\_Adult
@@ -361,7 +367,7 @@ EPA\_Adult
 1.6
 \strut\end{minipage} &
 \begin{minipage}[t]{0.18\columnwidth}\raggedright\strut
-79.8
+84.96
 \strut\end{minipage}\tabularnewline
 \begin{minipage}[t]{0.13\columnwidth}\raggedright\strut
 WHO
@@ -371,33 +377,6 @@ WHO
 \strut\end{minipage} &
 \begin{minipage}[t]{0.18\columnwidth}\raggedright\strut
 113.1
-\strut\end{minipage}\tabularnewline
-\begin{minipage}[t]{0.13\columnwidth}\raggedright\strut
-WHO
-\strut\end{minipage} &
-\begin{minipage}[t]{0.18\columnwidth}\raggedright\strut
-4
-\strut\end{minipage} &
-\begin{minipage}[t]{0.18\columnwidth}\raggedright\strut
-273.6
-\strut\end{minipage}\tabularnewline
-\begin{minipage}[t]{0.13\columnwidth}\raggedright\strut
-WHO
-\strut\end{minipage} &
-\begin{minipage}[t]{0.18\columnwidth}\raggedright\strut
-10
-\strut\end{minipage} &
-\begin{minipage}[t]{0.18\columnwidth}\raggedright\strut
-338.4
-\strut\end{minipage}\tabularnewline
-\begin{minipage}[t]{0.13\columnwidth}\raggedright\strut
-WHO
-\strut\end{minipage} &
-\begin{minipage}[t]{0.18\columnwidth}\raggedright\strut
-20
-\strut\end{minipage} &
-\begin{minipage}[t]{0.18\columnwidth}\raggedright\strut
-338.4
 \strut\end{minipage}\tabularnewline
 \bottomrule
 \end{longtable}
@@ -436,15 +415,6 @@ WHO
 \caption{}
 \end{figure}
 
-\newpage
-
-\includegraphics{manuscript_files/figure-latex/who_rec_low2_cp-1.pdf}
-\newpage
-
-\includegraphics{manuscript_files/figure-latex/who_rec_med1_cp-1.pdf}
-\newpage
-
-\includegraphics{manuscript_files/figure-latex/who_rec_med2_cp-1.pdf}
 \newpage
 
 \section*{References}\label{references}
