--- a/manuscript/manuscript.Rmd
+++ b/manuscript/manuscript.Rmd
@@ -12,7 +12,7 @@ affiliation:
 - affilnum: 1
   affil: US Environmental Protection Agency, Office of Research and Development, National Health and Environmental Effects Research Laboratory, Atlantic Ecology Division, 27 Tarzwell Drive  Narragansett, RI, 02882, USA
 - affilnum: 2
-  affil: University of Rhode Island, Department of Natural Resrouces Science, Kingston, RI, 02882, USA
+  affil: University of Rhode Island, Department of Natural Resources Science, Kingston, RI, 02882, USA
 output:
   pdf_document:
     fig_caption: yes
@@ -45,6 +45,9 @@ abstract: no
 if(!require(microcystinchla)){
   devtools::install_github("jhollist/microcystinchla",
                            auth_token = getOption("Github_Access"))
+}
+if(!require(viridis)){
+  install.pacakges("viridis") 
 }
 library("microcystinchla")
 library("dplyr")
@@ -140,17 +143,18 @@ mc_chla[7] <- get_chla(who_rec_med2_cp,0.5)
 \vspace{2mm}\hrule
 
 <!-- Abstract is being wrapped in latex here so that all analysis can be run in the chunk above and the results reproducibly referenced in the abstract. -->
-Cyanobacteria harmful algal blooms (cHABs) are associated with a wide range of adverse health effects that stem mostly from the presence of cyanotoxins.  To help protect against these impacts, several health advisory levels have been set for some toxins.  In particular, one of the most common toxins, microcystin, has several advisory levels set for drinking water and recreational use and managing water bodies to meet those levels could have far reaching benefits.  However, compared to other water quality measures, measurements of microcystin are not common and current field measurement techniques have limited precision and accuracy.  Addressing these issues will take time and resourced.  Thus, there is utility in finding indicators of microcystin that are already widely available, can be estimated quickly and *in situ*, and used as a first defense against high levels of microcystin.  In particular, chlorophyll *a* is very commonly measured, can be estimated *in situ*, and has been shown to be postively associated with microcystin.  In this paper we use this assocation to provide estimates of chlorophyll *a* that if exceeded would be indiciative of a higher probability of exceeding select health advisory concentrations for microcystin-LR.  Using the 2007 National Lakes Assessment and a conditional probability appoach that has been used in other water quality settings, we idenfify chlorophyll *a* concentrations that are more likely than not to be associated with an exceedance of a microcystin health advisory level.  We look at the recent US EPA standards for drinking water as well as the World Health Organization levels for drinking water and recerational use.  For microcystin concentrations of 0.3, 1, 1.6, and 2 we find chlorophyll *a* concentrations of `r mc_chla[1]`, `r mc_chla[2]`, `r mc_chla[3]`, and `r mc_chla[4]`, respectively.  When managing for these various microsystin levels exceeding these reproted chlorophyll *a* concentrations should be a trigger for further testing and possible managment action.   
+Cyanobacteria harmful algal blooms (cHABs) are associated with a wide range of adverse health effects that stem mostly from the presence of cyanotoxins.  To help protect against these impacts, several health advisory levels have been set for some toxins.  In particular, one of the more common toxins, microcystin, has several advisory levels set for drinking water and recreational use and managing water bodies to meet those levels could have far reaching benefits.  However, compared to other water quality measures, measurements of microcystin are not common and current field measurement techniques have limited precision and accuracy.  Addressing these issues will take time and resourced.  Thus, there is utility in finding indicators of microcystin that are already widely available, can be estimated quickly and *in situ*, and used as a first defense against high levels of microcystin.  In particular, chlorophyll *a* is very commonly measured, can be estimated *in situ*, and has been shown to be positively associated with microcystin.  In this paper we use this association to provide estimates of chlorophyll *a* that if exceeded would be indicative of a higher probability of exceeding select health advisory concentrations for microcystin-LR.  Using the 2007 National Lakes Assessment and a conditional probability approach that has been used in other water quality settings, we identify chlorophyll *a* concentrations that are more likely than not to be associated with an exceedance of a microcystin health advisory level.  We look at the recent US EPA standards for drinking water as well as the World Health Organization levels for drinking water and recreational use.  For microcystin concentrations of 0.3, 1, 1.6, and 2 we find chlorophyll *a* concentrations of `r mc_chla[1]`, `r mc_chla[2]`, `r mc_chla[3]`, and `r mc_chla[4]`, respectively.  When managing for these various microcystin levels exceeding these reported chlorophyll *a* concentrations should be a trigger for further testing and possible management action.   
 
 \vspace{3mm}\hrule
 \doublespace
 
 #Introduction
 
-In the summer of 2014, the city of Toledo, OH was forced to shut down their municipal water supply due in part to an excess of Microcystin-LR that resulted from a ongoing cyanobacterial harmful algal bloom (cHAB) in Lake Erie.  Since this event, signficant legislation has been passed in the United States and the US Environmental Protection Agency (USEPA) has released suggested microcystin-LR concentrations that would trigger health advisories.  While these levels and associated advisories are likey to help mitigate the impacts from harmful algal blooms, they are not without complications.  
-One of these complications is that they rely on availble measurments of Microcysin-LR which requires taking regular water samples and having those samples process in a lab to determine the toxin concentration [REFS].  This has the potentially to be costly and time consuming both factors which could limit monitoring efforts.  Fortunately, microcystin-LR has been shown to be associated with several other, more easily measured components of water quality.
+In the summer of 2014, the city of Toledo, OH was forced to shut down their municipal water supply due in part to an excess of Microcystin-LR that resulted from a ongoing cyanobacteria harmful algal bloom (cHAB) in Lake Erie.  Since this event, significant legislation has been passed in the United States and the US Environmental Protection Agency (USEPA) has released suggested microcystin-LR concentrations that would trigger health advisories.  While these levels and associated advisories are likely to help mitigate the impacts from harmful algal blooms, they are not without complications.  
 
-Chlorophyll *a* is one of the most commonly measured components of water quality that is also known to be strongly associated with Microsystin-LR concentrations [REFS].  Additionally there are many rapid measurements for assessing chlorophyll *a* levels *in situ*.  For instance, there are small or hand held flourometers that provide reliable measurements [REFS].   Given these facts, it might be possible to identify chlorophyll *a* concentrations that would be associated with the various Microcystin-LR health advisory levels.  Identifying these associations would provide another reliable tool for water resource managers to use to help manage the threat to public health posed by cHABs.
+One of these complications is that they rely on available measurements of microcystin-LR.  This toxin can be measured in the field using test strips but these are a coarse measure at best and currently available test strips focus on 1 and 10 $\mu$g/L [REFS].  Measurements with greater accuracy and precision requires taking regular water samples and having those samples process in a lab to determine the toxin concentration [REFS].  This has the potentially to be costly and time consuming both factors which could limit monitoring efforts.  Fortunately, microcystin-LR has been shown to be associated with several other, more easily measured components of water quality.
+
+Chlorophyll *a* is a very commonly measured components of water quality that is also known to be associated with Microsystin-LR concentrations [REFS].  Additionally there are many rapid measurements for assessing chlorophyll *a* levels *in situ*.  For instance, there are small or hand held flourometers that provide reliable measurements [REFS].   Given these facts, it might be possible to identify chlorophyll *a* concentrations that would be associated with the various Microcystin-LR health advisory levels.  Identifying these associations would provide another reliable tool for water resource managers to use to help manage the threat to public health posed by cHABs.
 
 
 
@@ -195,9 +199,7 @@ names(mc_conc_table)<-c("Source","Type","Concentration")
 pandoc.table(mc_conc_table,justify = "left" ,split.table = 120, split.cells  = c(20,20,20))
 ```
 
-We evaulated associated chlorohpyll *a* concentrations for an effect for each of the WHO and EPA levels. Lakes with higher microcystin-LR concentrations were rare. Only `r 100*(length(nla_dat$MCYST_TL_UGL[nla_dat$MCYST_TL_UGL>=10])/nrow(nla_dat))` % of lakes sampled had a concentration greater than 10.  For this analysis we focus on the microcystin concentrations that are better represented in the NLA data. These were  0.3, 1, 1.6, and 2 ug/l.
-
-##Data and Study Area
+We evaluated associated chlorophyll *a* concentrations for an effect for each of the WHO and EPA levels. Lakes with higher microcystin-LR concentrations were rare. Only `r 100*(length(nla_dat$MCYST_TL_UGL[nla_dat$MCYST_TL_UGL>=10])/nrow(nla_dat))` % of lakes sampled had a concentration greater than 10.  For this analysis we focus on the microcystin concentrations that are better represented in the NLA data. These were  0.3, 1, 1.6, and 2 $\mu$g/L.
 
 #Results
 
