--- a/manuscript/manuscript.tex
+++ b/manuscript/manuscript.tex
@@ -138,7 +138,7 @@ Dorothy Q. Kellog \textsuperscript{2}
 National Health and Environmental Effects Research Laboratory, Atlantic
 Ecology Division, 27 Tarzwell Drive Narragansett, RI, 02882, USA\\*
 \\*
-\textsuperscript{2}University of Rhode Island, Department of Natural Resrouces Science,
+\textsuperscript{2}University of Rhode Island, Department of Natural Resources Science,
 Kingston, RI, 02882, USA\\*
 }
 %%Adds corresponding author email(s) from YAML
@@ -169,7 +169,7 @@ Cyanobacteria harmful algal blooms (cHABs) are associated with a wide
 range of adverse health effects that stem mostly from the presence of
 cyanotoxins. To help protect against these impacts, several health
 advisory levels have been set for some toxins. In particular, one of the
-most common toxins, microcystin, has several advisory levels set for
+more common toxins, microcystin, has several advisory levels set for
 drinking water and recreational use and managing water bodies to meet
 those levels could have far reaching benefits. However, compared to
 other water quality measures, measurements of microcystin are not common
@@ -179,22 +179,22 @@ there is utility in finding indicators of microcystin that are already
 widely available, can be estimated quickly and \emph{in situ}, and used
 as a first defense against high levels of microcystin. In particular,
 chlorophyll \emph{a} is very commonly measured, can be estimated
-\emph{in situ}, and has been shown to be postively associated with
-microcystin. In this paper we use this assocation to provide estimates
-of chlorophyll \emph{a} that if exceeded would be indiciative of a
-higher probability of exceeding select health advisory concentrations
-for microcystin-LR. Using the 2007 National Lakes Assessment and a
-conditional probability appoach that has been used in other water
-quality settings, we idenfify chlorophyll \emph{a} concentrations that
+\emph{in situ}, and has been shown to be positively associated with
+microcystin. In this paper we use this association to provide estimates
+of chlorophyll \emph{a} that if exceeded would be indicative of a higher
+probability of exceeding select health advisory concentrations for
+microcystin-LR. Using the 2007 National Lakes Assessment and a
+conditional probability approach that has been used in other water
+quality settings, we identify chlorophyll \emph{a} concentrations that
 are more likely than not to be associated with an exceedance of a
 microcystin health advisory level. We look at the recent US EPA
 standards for drinking water as well as the World Health Organization
-levels for drinking water and recerational use. For microcystin
+levels for drinking water and recreational use. For microcystin
 concentrations of 0.3, 1, 1.6, and 2 we find chlorophyll \emph{a}
 concentrations of 25.1, 69.6, 84.96, and 113.14, respectively. When
-managing for these various microsystin levels exceeding these reproted
+managing for these various microcystin levels exceeding these reported
 chlorophyll \emph{a} concentrations should be a trigger for further
-testing and possible managment action.
+testing and possible management action.
 
 \vspace{3mm}
 
@@ -206,26 +206,31 @@ testing and possible managment action.
 
 In the summer of 2014, the city of Toledo, OH was forced to shut down
 their municipal water supply due in part to an excess of Microcystin-LR
-that resulted from a ongoing cyanobacterial harmful algal bloom (cHAB)
-in Lake Erie. Since this event, signficant legislation has been passed
-in the United States and the US Environmental Protection Agency (USEPA)
-has released suggested microcystin-LR concentrations that would trigger
+that resulted from a ongoing cyanobacteria harmful algal bloom (cHAB) in
+Lake Erie. Since this event, significant legislation has been passed in
+the United States and the US Environmental Protection Agency (USEPA) has
+released suggested microcystin-LR concentrations that would trigger
 health advisories. While these levels and associated advisories are
-likey to help mitigate the impacts from harmful algal blooms, they are
-not without complications.\\One of these complications is that they rely
-on availble measurments of Microcysin-LR which requires taking regular
-water samples and having those samples process in a lab to determine the
-toxin concentration {[}REFS{]}. This has the potentially to be costly
-and time consuming both factors which could limit monitoring efforts.
+likely to help mitigate the impacts from harmful algal blooms, they are
+not without complications.
+
+One of these complications is that they rely on available measurements
+of microcystin-LR. This toxin can be measured in the field using test
+strips but these are a coarse measure at best and currently available
+test strips focus on 1 and 10 \(\mu\)g/L {[}REFS{]}. Measurements with
+greater accuracy and precision requires taking regular water samples and
+having those samples process in a lab to determine the toxin
+concentration {[}REFS{]}. This has the potentially to be costly and time
+consuming both factors which could limit monitoring efforts.
 Fortunately, microcystin-LR has been shown to be associated with several
 other, more easily measured components of water quality.
 
-Chlorophyll \emph{a} is one of the most commonly measured components of
-water quality that is also known to be strongly associated with
-Microsystin-LR concentrations {[}REFS{]}. Additionally there are many
-rapid measurements for assessing chlorophyll \emph{a} levels \emph{in
-situ}. For instance, there are small or hand held flourometers that
-provide reliable measurements {[}REFS{]}. Given these facts, it might be
+Chlorophyll \emph{a} is a very commonly measured components of water
+quality that is also known to be associated with Microsystin-LR
+concentrations {[}REFS{]}. Additionally there are many rapid
+measurements for assessing chlorophyll \emph{a} levels \emph{in situ}.
+For instance, there are small or hand held flourometers that provide
+reliable measurements {[}REFS{]}. Given these facts, it might be
 possible to identify chlorophyll \emph{a} concentrations that would be
 associated with the various Microcystin-LR health advisory levels.
 Identifying these associations would provide another reliable tool for
@@ -316,14 +321,12 @@ Recreational
 \bottomrule
 \end{longtable}
 
-We evaulated associated chlorohpyll \emph{a} concentrations for an
+We evaluated associated chlorophyll \emph{a} concentrations for an
 effect for each of the WHO and EPA levels. Lakes with higher
 microcystin-LR concentrations were rare. Only 1.1616651 \% of lakes
 sampled had a concentration greater than 10. For this analysis we focus
 on the microcystin concentrations that are better represented in the NLA
-data. These were 0.3, 1, 1.6, and 2 ug/l.
-
-\subsection{Data and Study Area}\label{data-and-study-area}
+data. These were 0.3, 1, 1.6, and 2 \(\mu\)g/L.
 
 \section{Results}\label{results}
 
