--- a/manuscript/manuscript.tex
+++ b/manuscript/manuscript.tex
@@ -205,23 +205,25 @@ testing and possible management action.
 \section{Introduction}\label{introduction}
 
 In the summer of 2014, the city of Toledo, OH was forced to shut down
-their municipal water supply due in part to an excess of Microcystin-LR
+their municipal water supply due in part to an excess of microcystin-LR
 that resulted from a ongoing cyanobacteria harmful algal bloom (cHAB) in
-Lake Erie. Since this event, significant legislation has been passed in
-the United States and the US Environmental Protection Agency (USEPA) has
-released suggested microcystin-LR concentrations that would trigger
-health advisories. While these levels and associated advisories are
-likely to help mitigate the impacts from harmful algal blooms, they are
-not without complications.
+Lake Erie {[}REFS{]}. Since this event, significant legislation has been
+passed in the United States and the US Environmental Protection Agency
+(USEPA) has released suggested microcystin-LR concentrations that would
+trigger health advisories. MORE ON THE LEVELS. While these levels and
+associated advisories are likely to help mitigate the impacts from
+harmful algal blooms, they are not without complications.
 
 One of these complications is that they rely on available measurements
 of microcystin-LR. This toxin can be measured in the field using test
 strips but these are a coarse measure at best and currently available
 test strips focus on 1 and 10 \(\mu\)g/L {[}REFS{]}. Measurements with
-greater accuracy and precision requires taking regular water samples and
-having those samples process in a lab to determine the toxin
+greater accuracy and precision require taking regular water samples and
+having those samples processed in a lab to determine the toxin
 concentration {[}REFS{]}. This has the potentially to be costly and time
 consuming both factors which could limit monitoring efforts.
+Additionally, microcystin-LR is not currently a routine water quality
+measurment and thus availability of data will continue to be a problem.
 Fortunately, microcystin-LR has been shown to be associated with several
 other, more easily measured components of water quality.
 
