--- a/manuscript/manuscript.tex
+++ b/manuscript/manuscript.tex
@@ -174,7 +174,7 @@ drinking water and recreational use and managing water bodies to meet
 those levels could have far reaching benefits. However, compared to
 other water quality measures, measurements of microcystin are not common
 and current field measurement techniques have limited precision and
-accuracy. Addressing these issues will take time and resourced. Thus,
+accuracy. Addressing these issues will take time and resources. Thus,
 there is utility in finding indicators of microcystin that are already
 widely available, can be estimated quickly and \emph{in situ}, and used
 as a first defense against high levels of microcystin. In particular,
@@ -218,14 +218,15 @@ One of these complications is that they rely on available measurements
 of microcystin-LR. This toxin can be measured in the field using test
 strips but these are a coarse measure at best and currently available
 test strips focus on 1 and 10 \(\mu\)g/L {[}REFS{]}. Measurements with
-greater accuracy and precision require taking regular water samples and
-having those samples processed in a lab to determine the toxin
-concentration {[}REFS{]}. This has the potentially to be costly and time
-consuming both factors which could limit monitoring efforts.
-Additionally, microcystin-LR is not currently a routine water quality
-measurment and thus availability of data will continue to be a problem.
-Fortunately, microcystin-LR has been shown to be associated with several
-other, more easily measured components of water quality.
+greater accuracy and precision require taking water samples and
+processing those in a lab to determine the toxin concentration
+{[}REFS{]}. Additionally, microcystin-LR is, currently, not a routinely
+collected water quality parameter,thus, availability of microcystin-LR
+data may limit our ability to screen water bodies for exceedances of the
+various health advisories concentrations. Until microcystin-LR
+concentrations are more widely collected an alternative measure is
+needed. Fortunately, microcystin-LR has been shown to be associated with
+several other, more easily measured components of water quality.
 
 Chlorophyll \emph{a} is a very commonly measured components of water
 quality that is also known to be associated with Microsystin-LR
@@ -237,10 +238,14 @@ possible to identify chlorophyll \emph{a} concentrations that would be
 associated with the various Microcystin-LR health advisory levels.
 Identifying these associations would provide another reliable tool for
 water resource managers to use to help manage the threat to public
-health posed by cHABs.
-
-Use association and cpa to id chl a concentration that indicative of
-exceeding HA
+health posed by cHABs and would be especially useful in the absence of
+microcystin-LR concentrations. Thus, the goal of this paper is to utlize
+the National Lakes Assessment data and identify chlorophyll \emph{a}
+concentrations that are associated with higher probabilities of
+exceeding several microcystin-LR health advisory concentrations {[}NLA
+REF{]}. So that others may repeat this analysis, the data, code, and
+this manuscript are freely available via
+\href{https://github.com/USAPE/microcystinchla}{\url{https://github.com/USAPE/microcystinchla}}.
 
 \section{Methods}\label{methods}
 
